# subscriptable-path

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
src/subscriptable_path/: __init__.py  _sp.py
tests/: test_sp.py
