[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subscriptable_path"
version = "0.1.0"
description = "A subclass of Python's pathlib objects that allow subscripting/indexing."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Douglas Thor"},  # so that package core metadata "Author" field gets populated.
    {name = "Douglas Thor", email = "doug.thor@gmail.com"},
]
maintainers = []
keywords = ["path", "pathlib"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Operating System",
]
dependencies = []

[project.optional-dependencies]

[project.scripts]

[project.urls]
"Source" = "https://github.com/dougthor42/subscriptable-path"
"Changelog" = "https://github.com/dougthor42/subscriptable-path/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dougtho42/subscriptable-path/issues"
